able to retrieve and add articles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=${YUKAPORT}
+spring.application.name=leave-comment
 
+spring.datasource.url=jdbc:postgresql://${YUKAJUCO_URL}
+spring.datasource.username=${YUKAJUCO_U}
+spring.datasource.password=${YUKAJUCO_P}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
