--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=${YUKAPORT}
+server.port=14685
 spring.application.name=leave-comment
 
-spring.datasource.url=jdbc:postgresql://${YUKAJUCO_URL}
-spring.datasource.username=${YUKAJUCO_U}
-spring.datasource.password=${YUKAJUCO_P}
+spring.datasource.url=jdbc:postgresql://${ATABEY_URL}:${ATABEY_DB_PORT}/${ATABEY_DB_NAME}
+spring.datasource.username=${ATABEY_MASTER_U}
+spring.datasource.password=${ATABEY_MASTER_P}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
