--- a/.github/workflows/prodbuild.yml
+++ b/.github/workflows/prodbuild.yml
@@ -6,6 +6,11 @@ on:
     types: [opened, synchronize, reopened, closed]
 env:
   DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+  ATABEY_MASTER_U: ${{ secrets.ATABEY_MASTER_U }}
+  ATABEY_MASTER_P: ${{ secrets.ATABEY_MASTER_P }}
+  ATABEY_URL: ${{ secrets.ATABEY_URL }}
+  ATABEY_DB_PORT: ${{ secrets.ATABEY_DB_PORT }}
+  ATABEY_DB_NAME: ${{ secrets.ATABEY_DB_NAME }}
 #  ECR_REPOSITORY_PREFIX: ${{ secrets.ECR_REPOSITORY_PREFIX }}
 #  ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
 #  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_PREFIX }}-${{ secrets.APP_NAME }}
@@ -34,19 +39,26 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          file: ./Dockerfile
-          push: true
-          tags: skynetbot/leave-comment-srv:latest
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+        run: |
+          docker build --build-arg ATB_U=${ATABEY_MASTER_U} --build-arg ATB_P=${ATABEY_MASTER_P} --build-arg ATB_URL=${ATABEY_URL} --build-arg ATB_DB_PORT=${ATABEY_DB_PORT} --build-arg ATB_DB_NAME=${ATABEY_DB_NAME} -t skynetbot/leave-comment-srv:latest .
+          docker push $DOCKER_HUB_USERNAME/leave-comment-srv:$IMAGE_TAG
+          docker tag $DOCKER_HUB_USERNAME/leave-comment-srv:$IMAGE_TAG $DOCKER_HUB_USERNAME/leave-comment-srv:latest
+          docker push $DOCKER_HUB_USERNAME/leave-comment-srv:latest
+#      - name: Set up Docker Buildx
+#        id: buildx
+#        uses: docker/setup-buildx-action@v1
+#      - name: Build and push
+#        id: docker_build
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: ./
+#          file: ./Dockerfile
+#          push: true
+#          tags: $DOCKER_HUB_USERNAME/leave-comment-srv:latest
+#      - name: Image digest
+#        run: echo ${{ steps.docker_build.outputs.digest }}
   #    - name: Build the image
   #      id: docker_build
   #      run: |
