removed pushing image. added testing dependencies in pom

--- a/.github/workflows/prodbuild.yml
+++ b/.github/workflows/prodbuild.yml
@@ -30,9 +30,9 @@ jobs:
         id: docker_build
         run: |
           docker build --build-arg ATB_U=${ATABEY_MASTER_U} --build-arg ATB_P=${ATABEY_MASTER_P} --build-arg ATB_URL=${ATABEY_URL} --build-arg ATB_DB_PORT=${ATABEY_DB_PORT} --build-arg ATB_DB_NAME=${ATABEY_DB_NAME} -t $DOCKER_HUB_USERNAME/leave-comment-srv:$IMAGE_TAG .
-          docker push $DOCKER_HUB_USERNAME/leave-comment-srv:$IMAGE_TAG
-          docker tag $DOCKER_HUB_USERNAME/leave-comment-srv:$IMAGE_TAG $DOCKER_HUB_USERNAME/leave-comment-srv:latest
-          docker push $DOCKER_HUB_USERNAME/leave-comment-srv:latest
+#          docker push $DOCKER_HUB_USERNAME/leave-comment-srv:$IMAGE_TAG
+#          docker tag $DOCKER_HUB_USERNAME/leave-comment-srv:$IMAGE_TAG $DOCKER_HUB_USERNAME/leave-comment-srv:latest
+#          docker push $DOCKER_HUB_USERNAME/leave-comment-srv:latest
   analyze:
     needs: [build]
     name: Test Code and Analyze Quality CI SonarCloud
