changed repository from docker hub to ecr private repo. changed secrets

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=14685
+server.port=${LEAVE_COMMENT_SRV_PORT}
 spring.application.name=leave-comment
 
 spring.datasource.url=jdbc:postgresql://${ATABEY_URL}:${ATABEY_DB_PORT}/${ATABEY_DB_NAME}
