--- a/.github/workflows/prodbuild.yml
+++ b/.github/workflows/prodbuild.yml
@@ -5,15 +5,15 @@ on:
   pull_request:
     types: [opened, synchronize, reopened, closed]
 env:
-  ATABEY_DB_NAME: ${{ ATABEY_DB_NAME }}
-  ATABEY_DB_PORT: ${{ ATABEY_DB_PORT }}
+  ATABEY_DB_NAME: ${{ secrets.ATABEY_DB_NAME }}
+  ATABEY_DB_PORT: ${{ secrets.ATABEY_DB_PORT }}
   ATABEY_MASTER_U: ${{ secrets.ATABEY_MASTER_U }}
   ATABEY_MASTER_P: ${{ secrets.ATABEY_MASTER_P }}
   ATABEY_URL: ${{ secrets.ATABEY_URL }}
-  ECR_REPO_NAME: ${{ ECR_REPO_NAME }}
-  ECR_URI: ${{ ECR_URI }}
+  ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME }}
+  ECR_URI: ${{ secrets.ECR_URI }}
   IMAGE_TAG: ${{ github.sha }}
-  LEAVE_COMMENT_SRV_PORT: ${{ LEAVE_COMMENT_SRV_PORT }}
+  LEAVE_COMMENT_SRV_PORT: ${{ secrets.LEAVE_COMMENT_SRV_PORT }}
 jobs:
   build:
     name: CI to ECR
