split workflows for main and dev branch

--- a/.github/workflows/devbuild.yml
+++ b/.github/workflows/devbuild.yml
@@ -1,7 +1,7 @@
 name: CI/CD
 on:
   push:
-    branches: [main]
+    branches: [dev]
   pull_request:
     types: [opened, synchronize, reopened, closed]
 env:
@@ -19,24 +19,13 @@ jobs:
     name: CI to ECR
     runs-on: ubuntu-latest
     steps:
-      - name: ECR Credentials Configuration
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
-          aws-region: ${{ secrets.AWS_REGION }}
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
       - name: Check Out Repo
         uses: actions/checkout@v2
       - name: Build and push
         id: docker_build
         run: |
           docker build --build-arg ATB_SRV_P=${LEAVE_COMMENT_SRV_PORT} --build-arg ATB_U=${ATABEY_MASTER_U} --build-arg ATB_P=${ATABEY_MASTER_P} --build-arg ATB_URL=${ATABEY_URL} --build-arg ATB_DB_PORT=${ATABEY_DB_PORT} --build-arg ATB_DB_NAME=${ATABEY_DB_NAME} -t $ECR_URI/$ECR_REPO_NAME:$IMAGE_TAG .
-          docker push $ECR_URI/$ECR_REPO_NAME:$IMAGE_TAG
           docker tag $ECR_URI/$ECR_REPO_NAME:$IMAGE_TAG $ECR_URI/$ECR_REPO_NAME:latest
-          docker push $ECR_URI/$ECR_REPO_NAME:latest
   analyze:
     needs: [build]
     name: Test Code and Analyze Quality CI SonarCloud
@@ -66,17 +55,3 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-  #deploy:
-  #  # ---[ Use docker image from the build step and deploy on EKS ]---
-  #  #needs: [build, analyze]
-  #  name: Deploy on EKS
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Deploy to EKS
-  #      run: |
-  #        aws configure set aws_access_key_id ${{ secrets.EKS_ACCESS_KEY_ID }} --profile p3
-  #        aws configure set aws_secret_access_key ${{ secrets.EKS_SECRET_ACCESS_KEY }} --profile p3
-  #        aws configure set default.region ${{ secrets.AWS_REGION }} --profile p3
-  #        aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --profile p3 --name $ECR_REPOSITORY_PREFIX
-  #        kubectl --namespace default set image deployment/leave-comment-srv-deployment leave-comment-srv-service=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-  #        kubectl --namespace default rollout status deploy/leave-comment-srv-deployment
